manifests/wordpress/template-0.1.yaml
## https://www.youtube.com/watch?v=n5dpQLqOfqM
## https://github.com/ChristianLempa/boilerplates

apiVersion: v1
kind: Namespace
metadata:
  name: whoami
  labels:
    name: whoami

---

## Wordpress Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  selector:
    matchLabels:
      app: whoami-app
  replicas: 1
  template:
    metadata:
      labels:
        app: whoami-app
    spec:
      volumes:
        - name: whoami-pv
          persistentVolumeClaim:
            claimName: whoami-pvc
        - name: whoami-custom-php-ini
          configMap:
            name: whoami-custom-php-ini
      # nodeSelector:
      #   kubernetes.io/hostname: r7-11
      hostAliases:
      - ip: 168.205.123.10
        hostnames:
        - whoami.markitectos.com
      # - ip: 127.0.0.1
      #   hostnames:
      #   - whoami.markitectos.com        
      containers:
        - name: whoami-container
          image: 'wordpress:6.4.1-php8.2-apache' # wordpress:6.4.1-php8.2-apache
          volumeMounts:
            - mountPath: "/var/www/html/wp-content"
              name: whoami-pv
            - mountPath: /usr/local/etc/php/conf.d/custom-conf
              name: whoami-custom-php-ini
              readOnly: true
            # - mountPath: "/other/path"
            #   name: other-pv-storage
            # - mountPath: "/other/path"
            #   name: other-pv-storage                     
          # resources:
          #   requests:
          #     memory: "256Mi" # Memory reserved
          #     cpu: "500m" # CPU reserved
          #   limits:
          #      memory: "512Mi" # Maximum memory allowed
          #      cpu: "1000m" # Maximum CPU allowed
          ports:
            - containerPort: 80 
          imagePullPolicy: Always # IfNotPresent or Always

          livenessProbe: # Check if pod is alive, if not restart
            failureThreshold: 6
            httpGet:
              path: /wp-admin/install.php
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe: # Check if pod is ready, and enable it to get traffic only when is ready
            failureThreshold: 6
            httpGet:
              path: /wp-login.php
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5

---

## https://github.com/dmancloud/traefik-cert-manager/blob/main/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
spec:
  type: ClusterIP
  selector:
    app: whoami-app
  ports:
    - name: http
      port: 80
      targetPort: 80

---

## https://github.com/dmancloud/traefik-cert-manager/blob/main/traefik/default-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: whoami
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---

## https://github.com/dmancloud/traefik-cert-manager/blob/main/nginx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: whoami
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.whoami.markitectos.com`)
      kind: Rule
      services:
        - name: whoami-service
          port: 80
      middlewares:
        - name: default-headers
    - match: Host(`whoami.markitectos.com`)
      kind: Rule
      services:
        - name: whoami-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: whoami-markitectos-ssl-secret
