manifests/wordpress/template-0.2-percona-namespace.yaml


# Wordpress Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: percona
spec:
  selector:
    matchLabels:
      app: whoami-app
  replicas: 1
  template:
    metadata:
      labels:
        app: whoami-app
        redis-client: "true"
    spec:
###############################################################
      volumes:
        - name: whoami-pv
          persistentVolumeClaim:
            claimName: whoami-pvc      
################################################################  
        - name: php-extensions
          emptyDir: {}
################################################################  
        - name: whoami-custom-php-ini
          configMap:
            name: whoami-custom-php-ini
        # - name: whoami-custom-apache-config
        #   configMap:
        #     name: whoami-custom-apache-config            
      # nodeSelector:
      #   kubernetes.io/hostname: r7-11
      hostAliases:
      - ip: 168.205.123.10
        hostnames:
        - whoami.markitectos.com
      # - ip: 127.0.0.1
      #   hostnames:
      #   - whoami.markitectos.com        
      containers:
        - name: whoami-container
          image: 'wordpress:6.5.5-php8.3-apache' # wordpress:6.4.1-php8.2-apache
          volumeMounts:
            - mountPath: "/var/www/html/wp-content"
              name: whoami-pv        
              ################################################################    
            - mountPath: /usr/local/lib/php/extensions/no-debug-non-zts-20230831/redis.so
              subPath: redis.so
              name: php-extensions
              readOnly: true
              ################################################################    
            - mountPath: /usr/local/etc/php/conf.d/custom-conf
              name: whoami-custom-php-ini
              readOnly: true
            # - mountPath: /etc/apache2/sites-available
            #   name: whoami-custom-apache-config
            #   readOnly: true              
            # - mountPath: "/other/path"
            #   name: other-pv-storage
            # - mountPath: "/other/path"
            #   name: other-pv-storage                     
          # resources:
          #   requests:
          #     memory: "256Mi" # Memory reserved
          #     cpu: "500m" # CPU reserved
          #   limits:
          #      memory: "512Mi" # Maximum memory allowed
          #      cpu: "1000m" # Maximum CPU allowed
          ports:
            - containerPort: 80 
          imagePullPolicy: Always # IfNotPresent or Always
          livenessProbe: # Check if pod is alive, if not restart
            failureThreshold: 6
            httpGet:
              path: /wp-admin/install.php
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          ##
          ## TODO: We will have to figure out how to add a readiness probe that runs with this image that starts without install
          ##
          readinessProbe: # Check if pod is ready, and enable it to get traffic only when is ready
           failureThreshold: 6
           httpGet:
             path: /wp-login.php
             port: 80
             scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 30
           successThreshold: 1
           timeoutSeconds: 5
          lifecycle:
            postStart:
              exec:
                command: 
                  - "/bin/sh"
                  - "-c"
                  - >
                    mkdir -p /var/www/html/wp-content/sessions &&
                    chown www-data:www-data /var/www/html/wp-content/sessions &&
                    chmod 755 /var/www/html/wp-content/sessions &&
                    rm -r /var/www/html/wp-content/themes/twentytwentytwo &&
                    rm -r /var/www/html/wp-content/themes/twentytwentythree &&
                    rm -r /var/www/html/wp-content/plugins/akismet &&
                    rm /var/www/html/wp-content/plugins/hello.php
---

## https://github.com/dmancloud/traefik-cert-manager/blob/main/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: percona
spec:
  type: ClusterIP
  selector:
    app: whoami-app
  ports:
    - name: http
      port: 80
      targetPort: 80

---

## https://github.com/dmancloud/traefik-cert-manager/blob/main/traefik/default-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: percona
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---
## https://github.com/dmancloud/traefik-cert-manager/blob/main/nginx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: percona
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.whoami.markitectos.com`) || Host(`whoami.markitectos.com`)
      kind: Rule
      services:
        - name: whoami-service
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: whoami-markitectos-ssl-secret
