manifests/wordpress/template-0.5-nginx-wordpress_no_fastcgi.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-nginx-wordpress
  namespace: percona
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: whoami-nginx-wordpress
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whoami-nginx-wordpress
    spec:
      volumes:
      - name: whoami-wp-content-pv
        persistentVolumeClaim:
          claimName: whoami-wp-content-pvc   
      - name: whoami-nginx-conf
        configMap:
          name: whoami-nginx-http-conf
      - name: whoami-nginx-default-conf
        configMap:
          name: whoami-nginx-server-default-conf
      - name: shared-files
        emptyDir: {}
      containers:
        - name: whoami-wordpress
          image: wordpress:6.6.1-php8.3-fpm-alpine
          imagePullPolicy : IfNotPresent
          volumeMounts:
            - name: shared-files
              mountPath: /var/www/html
            - mountPath: /var/www/html/wp-content
              name: whoami-wp-content-pv
        - name: whoami-nginx
          image: nginx:1.27.0-alpine3.19-slim
          imagePullPolicy : IfNotPresent
          volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
          - mountPath: /var/www/html/wp-content
            name: whoami-wp-content-pv
          - mountPath: /var/www/html/wp-content/nginx.conf
            subPath: nginx.conf
            name: whoami-nginx-conf
            readOnly: true 
          - mountPath: /etc/nginx/conf.d
            name: whoami-nginx-default-conf
            readOnly: true

---

apiVersion: v1
kind: Service
metadata:
  namespace: percona
  name: whoami-nginx-wordpress
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: whoami-nginx-wordpress
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-default-headers
  namespace: percona
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: percona
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.whoami.markitectos.com`) || Host(`whoami.markitectos.com`)
      kind: Rule
      services:
        - name: whoami-nginx-wordpress
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: whoami-sticky-cookie
              secure: true
              sameSite: none
          strategy: RoundRobin
      middlewares:
        - name: whoami-default-headers
  tls:
    secretName: whoami-markitectos-ssl-secret
