manifests/wordpress/template-0.7.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: percona
  name: whoami-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-nginx
  template:
    metadata:
      labels:
        app: whoami-nginx
    spec:
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: nginx-default-config
        configMap:
          name: nginx-default-config
      - name: nginx-cache
        emptyDir: {}
      containers:
      - name: nginx
        image: alpine:3.18
        ports:
        - containerPort: 80
        command: ["/bin/sh"]
        args: ["-c", "apk add --no-cache nginx nginx-mod-http-cache-purge && nginx -g 'daemon off;'"]
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: nginx-default-config
          mountPath: /etc/nginx/http.d/default.conf
          subPath: default.conf
        - name: nginx-cache
          mountPath: /var/cache/nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: percona
  name: whoami-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-wordpress
  template:
    metadata:
      labels:
        app: whoami-wordpress
    spec:
      containers:
      - name: whoami-wordpress
        image: wordpress:6.6.1-php8.3-fpm-alpine
        imagePullPolicy : IfNotPresent

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: percona
  name: t-wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t-wordpress
  template:
    metadata:
      labels:
        app: t-wordpress
    spec:
      containers:
      - name: t-wordpress
        image: wordpress:6.6.1-php8.3-fpm-alpine
        imagePullPolicy : IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  name: whoami-nginx
  namespace: percona
spec:
  type: ClusterIP
  selector:
    app: whoami-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: whoami-wordpress
  namespace: percona
spec:
  type: ClusterIP
  selector:
    app: whoami-wordpress
  ports:
    - name: https
      port: 9000
      protocol: TCP
      targetPort: 9000

---

apiVersion: v1
kind: Service
metadata:
  name: t-wordpress
  namespace: percona
spec:
  type: ClusterIP
  selector:
    app: t-wordpress
  ports:
    - name: https
      port: 9000
      protocol: TCP
      targetPort: 9000

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: whoami-default-headers
  namespace: percona
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-route
  namespace: percona
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.whoami.markitectos.com`) || Host(`whoami.markitectos.com`)
      kind: Rule
      services:
        - name: whoami-nginx
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: whoami-sticky-cookie
              secure: true
              sameSite: none
          strategy: RoundRobin
      middlewares:
        - name: whoami-default-headers
  tls:
    secretName: whoami-markitectos-ssl-secret

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: t-ingress-route
  namespace: percona
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.t.markitectos.com`) || Host(`t.markitectos.com`)
      kind: Rule
      services:
        - name: whoami-nginx
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: t-sticky-cookie
              secure: true
              sameSite: none
          strategy: RoundRobin
      middlewares:
        - name: whoami-default-headers
  tls:
    secretName: t-markitectos-ssl-secret
